--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:latest": "knex migrate:latest --knexfile database/knexfile.js",
-    "seed": "knex seed:run --knexfile database/knexfile.js",
-    "migrate:rollback": "knex migrate:rollback --all --knexfile database/knexfile.js"
+    "migrate:latest": "knex migrate:latest --knexfile database/knexfile.ts",
+    "seed": "knex seed:run --knexfile database/knexfile.ts",
+    "migrate:rollback": "knex migrate:rollback --all --knexfile database/knexfile.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
