--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+   "functions": {
+    "src/*.ts": {
+      "memory": 128,
+      "maxDuration": 10
+    }
+  },
   "builds": [
     {
       "src": "src/main.ts",
