--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,18 +7,9 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
-    "allowJs": true,
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  },
-  "exclude": ["node_modules", "dist", "database"],
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+    "incremental": true
+  }
 }
