--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^9.4.3",
     "@prisma/client": "^4.10.1",
+    "@socket.io/redis-adapter": "^8.2.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.1",
     "mysql2": "^3.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -43,6 +46,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.7.4",
     "typeorm": "0.3.19",
     "typeorm-extension": "^3.3.0"
   },
